Revision history for Perl module Perl-Dist

1.12 Thu 29 Jan 2009
	- This release co-incides with Strawberry Perl January 2009
	- Various minor tweaks

1.11 Thu  4 Dec 2008
	- This release represents a moment of stability at 5.10.0.4 Beta 1
	- Adding an improved caching useragent
	- Some minor tweaks to allow Parrot builds

1.10 Tue 11 Nov 2008
	- Adding initial support for Perl 5.8.9

1.09 Mon 20 Oct 2008
	- This version was used to build Strawberry Perl October 2008

1.08 Sat 18 Oct 2008
        - Shortcut run when no zip or exe target

1.07 Thu 16 Oct 2008
	- Better linking to Perl Documentation

1.06 Wed 15 Oct 2008
	- This is expected to be the Perl::Dist used to build
	  Strawberry Perl October
	- Bootstrap Perl is moving to the Strawberry distribution
	- After the toolchain is installed, run a full CPAN upgrade
	  to catch anything out of date NOT explicitly listed in the
	  toolchain list.
	- All tests (finally) pass during the 5 hours test run

1.05_04 Tue 14 Oct 2008
	- Adding missing dependency on File::HomeDir
	- Additional minor tweaks and minor bug squashing

1.05_03 Mon 13 Oct 2008
	- Additional tweaks and clean ups
	- Force the install of CPAN.pm

1.05_02 Sat 11 Oct 2008
	- Very aggressive dependencies, everything now to maximum
	- Discovered and fixed a number of dependency bugs
	- Bug fix in 09_file_asset.t

1.05_01 Sat 11 Oct 2008
	- Reorganising the test script order
	- Added separate 5.8.8 and 5.10.0 test scripts
	- Added a full test of Vanilla ->run
	- Removing force flags for stuff that now works
	- Adding a new Template-Toolkit-based patch system
	- Unified the toolchain install methods
	- Set the environment correctly when installing CPAN modules

1.04 Wed 23 Jul 2008
	- This release co-incides with Strawberry August 2008
	- Tweak to allow libwww-perl to build behind a proxy
	- Add a temporary bug-fix/patch for MM_Win32.pm
	- Add a workaround for Data::Compare failing on Win32
	- Adding Math::Pari to the default build

1.03 Tue 22 Jul 2008